W-16584126: PolyMule fixes (#13817)
* W-16584126: PolyMule fixes

* Fix `equals`

* Allowing lambda serialization

* Serialization test

* Review.

(cherry picked from commit 0ec0360a90ea2ded71750b62b721a9d63fe0927e)