@@ -208,6 +208,7 @@
             -XX:+IgnoreUnrecognizedVMOptions
             --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
             ${surefire.args.base}
         </surefire.test.unit.open.args>
         <!-- Emulate the behaviour in standalone, where slf4j is loaded in the boot layer -->
